# cii-final

./: README.md  processamento.sql  processamento_info_livros.sql
recommendation_interface/: pyproject.toml
recommendation_interface/src/: loader.py  main.py  modelo.pkl
recommendation_interface/src/pages/: index.py
